update swagger for user controller
